updated the first two chapters of the manual for ogs6

--- a/app-literature.tex
+++ b/app-literature.tex
@@ -2,22 +2,38 @@
 \addcontentsline{toc}{chapter}{Further Reading}
 
 \begin{thebibliography}{}
+
 \bibitem{ogs04}
 Kalbacher T, Mettier R, et al.: Geometric modelling and object-oriented software concepts applied to a heterogeneous fractured network from the grimsel rock laboratory.
-\textit{Comput Geosci,} \textbf{11(1):}9--26 (2007)
+\emph{Comput Geosci,} \textbf{11(1):} 9--26 (2007)
+
 \bibitem{ogs05}
 OpenGeoSys -- scientific software for coupled processes in porous media,
-\texttt{http://www.opengeosys.net}
+\texttt{http://www.opengeosys.org}
+
 \bibitem{ogs06}
-OgenGeoSys-Wiki: Source code, current projects, presentations and much more. \texttt{https://svn.ufz.de/ogs/}
-\bibitem{ogs03}
-Rink K, Kalbacher T, Kolditz O: Visual Data Exploration for Hydrological Analysis. \textit{Environ Earth Sci,} DOI:10.1007/s12665-011-1230-6
+OpenGeoSys-Wiki: Source code, current projects, presentations and much more. \texttt{https://svn.ufz.de/ogs/}
+
 \bibitem{ogs07}
-Rink K, Fischer T, Kolditz O: Data Visualisation and Validation for Hydrological Models. \textit{Proc. of International Conference on Computer Graphics, Visualization, Computer Vision and Image Processing (CGVCVIP),} pages 169--176
+Rink K, Bilke L, Selle B, Kolditz O: User Guided Generation of Hydrological Models: Interface Design, Workflows and Concepts for an Extensible Software Framework. \emph{Proc. of 6th
+Int Congress on Environmental Modelling and Software (iEMSs2012),} (2012)
+
+\bibitem{ogs07}
+Rink K, Fischer T, Kolditz O: Data Visualisation and Validation for Hydrological Models. \emph{Proc. of International Conference on Computer Graphics, Visualization, Computer Vision and Image Processing (CGVCVIP2011),} pages 169--176 (2011)
+
+\bibitem{ogs09}
+Rink K, Fischer T, Selle B, Kolditz O: A Data Exploration Framework for Validation and Setup of Hydrological Models.
+\emph{Environ Earth Sci,} \textbf{69(2)} (2013) 
+DOI: 10.1007/s12665-012-2030-3
+
+\bibitem{ogs03}
+Rink K, Kalbacher T, Kolditz O: Visual Data Exploration for Hydrological Analysis. \emph{Environ Earth Sci,} \textbf{65(5):} 1395--1403 (2012)
+
 \bibitem{ogs01}
 Wang W, Kolditz O: Object-oriented finite element analysis of thermo-hydro-mechanical (THM) problems in porous media.
-\textit{Int J Numer Meth Engng,} \textbf{69:}162--201 (2007)
+\emph{Int J Numer Meth Engng,} \textbf{69:}162--201 (2007)
+
 \bibitem{ogs02}
-Wang W, Kosakowski G, Kolditz O: A parallel finite element scheme for thermo-hydro-mechanical (THM) coupled problems in porous media \textit{Comput Geosci,} \textbf{35(8):}1631--1641 (2009)
+Wang W, Kosakowski G, Kolditz O: A parallel finite element scheme for thermo-hydro-mechanical (THM) coupled problems in porous media \emph{Comput Geosci,} \textbf{35(8):}1631--1641 (2009)
 
 \end{thebibliography} 
